manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook
  labels:
    app: hello-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-webhook
  template:
    metadata:
      labels:
        app: hello-webhook
    spec:
      containers:
      - name: webhook
        command:
        - /usr/local/bin/zwf
        image: hub.agoralab.co/devops-public/demeter:test1
        imagePullPolicy: Always
        ports:
        - containerPort: 443
        volumeMounts:
        - name: webhook-tls-secret
          mountPath: "/tls"
          readOnly: true        
      volumes:
      - name: webhook-tls-secret
        secret:
          secretName: webhook-tls-secret
