manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: webhook
spec:
  type: ClusterIP
  selector:
    app: hello-webhook
  ports:
  - protocol: TCP
    port: 443
    targetPort: 443
