manifests/hook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: wenhook.agoralab.co
webhooks:
- name: webhook.agoralab.co
  objectSelector:
    matchLabels:    
      app: hello
  rules:
  - apiGroups:   [""]
    apiVersions: ["v1"]
    operations:  ["CREATE"]
    resources:   ["pods"]
    scope:       "Namespaced"
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCakNDQWU2Z0F3SUJBZ0lCQVRBTkJna3Foa2lHOXcwQkFRc0ZBREFWTVJNd0VRWURWUVFERXdwdGFXNXAKYTNWaVpVTkJNQjRYRFRJeU1EVXdOVEUwTkRZeE1sb1hEVE15TURVd016RTBORFl4TWxvd0ZURVRNQkVHQTFVRQpBeE1LYldsdWFXdDFZbVZEUVRDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTGVKCnpZNUZzTVFjc0J6aUszZnNoQmR4TGw2NCtiR2tnSk44VjdOVFZHaHNPeDF1RDVySG5oU1pOMGlJMXVNRVdrdVkKSHUwQVZxVEFGN2Z2aFNRMkVBdGFETnowanpnRm5ZVGEvcEUzYUFnWlFWTEM4dk1YZjVLd3NpdkNtTVZmRGNyVQpFdndKNmdOL0xBVF [...]
    service:
      namespace: "default"
      name: "webhook"
      path: /
  admissionReviewVersions: ["v1"]
  sideEffects: None
  timeoutSeconds: 10
